--- a/installation.html
+++ b/installation.html
@@ -502,7 +502,7 @@ By Carlos R. B. Azevedo
 
   <p class="copyright">
     
-      © Copyright 2023.
+      © Copyright 2025, Carlos R. B. Azevedo.
       <br/>
     
   </p>
