deploy: c1c7475854dc0a8618cf1b6d9e2a428d1e641322

--- a/tutorials/multimodal_clusters.html
+++ b/tutorials/multimodal_clusters.html
@@ -485,7 +485,7 @@ document.write(`
 
 <span class="c1"># DDC</span>
 <span class="n">S_ddc</span><span class="p">,</span> <span class="n">w_ddc</span><span class="p">,</span> <span class="n">info_ddc</span> <span class="o">=</span> <span class="n">fit_ddc_coreset</span><span class="p">(</span>
-    <span class="n">X</span><span class="p">,</span> <span class="n">k</span><span class="o">=</span><span class="n">k</span><span class="p">,</span> <span class="n">mode</span><span class="o">=</span><span class="s1">&#39;euclidean&#39;</span><span class="p">,</span> <span class="n">preset</span><span class="o">=</span><span class="s1">&#39;balanced&#39;</span><span class="p">,</span> <span class="n">random_state</span><span class="o">=</span><span class="n">RANDOM_STATE</span>
+    <span class="n">X</span><span class="p">,</span> <span class="n">k</span><span class="o">=</span><span class="n">k</span><span class="p">,</span> <span class="n">random_state</span><span class="o">=</span><span class="n">RANDOM_STATE</span>
 <span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;✓ DDC: </span><span class="si">{</span><span class="nb">len</span><span class="p">(</span><span class="n">S_ddc</span><span class="p">)</span><span class="si">}</span><span class="s2"> representatives&quot;</span><span class="p">)</span>
 
